@@ -126,6 +126,9 @@ BUG FIXES
 
     o	Using seq.POSIXt(by="2 weeks") was stepping by single weeks (PR#1046).
 
+    o	dummy.coef.lm was not handling complex terms like z:I(x).
+	It now either does or warns and gives NAs (PR#1048).
+
 
 
 		CHANGES IN R VERSION 1.3.0
